--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "pg-promise": "^3.0.3",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4",
+    "rewire": "^2.5.1",
+    "supertest": "^1.1.0"
   }
 }
